# CG-pc2

./: .gitignore  CMakeLists.txt  README.md
exercise01/: ejercicio1.cpp  sol  solution.cpp  test.cpp
exercise02/: ejercicio2.cpp  sol  solution.cpp  test.cpp
exercise03/: ejercicio3.cpp  solution.cpp  test.cpp
exercise04/: ejercicio4.cpp  solution.cpp  test.cpp
exercise05/: solution.cpp  test.cpp
exercise06/: ejercicio6.cpp  sol  solution.cpp
exercise07/: ejercicio7.cpp  solution.cpp  test.cpp
exercise08/: ejercicio8.cpp  solution.cpp  test.cpp
exercise10/: ejercicio10.cpp  solution.cpp  test.cpp
exercise11/: sol  solution.cpp  test.cpp
exercise12/: ejercicio12.cpp  solution.cpp  test.cpp
exercise13/: ejercicio13.cpp  solution.cpp
exercise14/: ejercicio14.cpp  solution.cpp
prototipo/: prototipos-y-casos-pc2.txt
